perf: stop idle mining rescans